[build-system]
requires = ["setuptools>=61", "cython", "numpy", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metapredict"
dynamic = ["version"]
description = "A machine learning-based tool for predicting protein disorder."
authors = [
    {name = "Ryan Emenecker", email = "remenecker@wustl.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

readme = "README.md" 

dependencies = [
    "cython",
    "torch",
    "numpy",
    "matplotlib",
    "protfasta",
    "scipy",
    "urllib3",
    "tqdm",
    "pytorch_lightning",
    "getSequence >= 2.2.1",
]

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]


[project.scripts]
metapredict-graph-disorder = "metapredict.scripts.metapredict_graph_disorder:main"
metapredict-predict-disorder = "metapredict.scripts.metapredict_predict_disorder:main"
metapredict-quick-graph = "metapredict.scripts.metapredict_quick_graph:main"
metapredict-quick-predict = "metapredict.scripts.metapredict_quick_predict:main"
metapredict-uniprot = "metapredict.scripts.metapredict_uniprot:main"
metapredict-predict-idrs = "metapredict.scripts.metapredict_predict_idrs:main"
metapredict-graph-pLDDT = "metapredict.scripts.metapredict_graph_pLDDT:main"
metapredict-predict-pLDDT = "metapredict.scripts.metapredict_predict_pLDDT:main"
metapredict-name = "metapredict.scripts.metapredict_name:main"
metapredict-caid = "metapredict.scripts.metapredict_caid:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["metapredict", "metapredict.*"]  # Discover all sub-packages under metapredict

[tool.setuptools.package-data]
metapredict = ["py.typed"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "metapredict/_version.py"
